--- a/html2021/Informatikai_ism_forrasok_K2121/3. Weboldalak kódolása és adatbázis-kezelés/web-forras/evmadara.html
+++ b/html2021/Informatikai_ism_forrasok_K2121/3. Weboldalak kódolása és adatbázis-kezelés/web-forras/evmadara.html
@@ -67,7 +67,7 @@
           A természeti értékek védelmét számos egyéb program is segíti. A <a href="http://fna.hu/hir/vadonelok2021" target="_blank">"Föld Napja Alapítvány"</a> gyűjtéséből megtudhatjuk, hogy 2021-ben az...
         </p>
         <ul class="lista">
-          <li>év kétéltűje a <span class="dijazott">zöld varangy</span>,</li>++++
+          <li>év kétéltűje a <span class="dijazott">zöld varangy</span>,</li>
           <li>év fája a <span class="dijazott">lisztes berkenye</span>,</li>
           <li>év emlőse a <span class="dijazott">hermelin</span>,</li>
           <li>év rovara a <span class="dijazott">kacsafarkú szender</span>,</li>
